--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-navigation/native": "^7.0.14",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.30",
+    "expo-camera": "~16.0.14",
     "expo-font": "~13.0.3",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
@@ -67,7 +68,7 @@
     "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17",
-    "expo-camera": "~16.0.14"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
