--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.2.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.3"
