--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.3",
-    "expo-haptics": "~14.0.1"
+    "expo-haptics": "~14.0.1",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
