--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.3",
     "expo-haptics": "~14.0.1",
-    "expo-av": "~15.0.2"
+    "expo-av": "~15.0.2",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
